--- a/ArgsImplementation/ArgsImplementation.csproj
+++ b/ArgsImplementation/ArgsImplementation.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IKVM" Version="8.1.5717" />
+  </ItemGroup>
+
 </Project>
